--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="icon" href="/icon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Soccer Club</title>
+
+    <!-- Kakao SDK -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>
+      Kakao.init(import.meta.env.VITE_KAKAO_JS_KEY);
+    </script>
   </head>
   <body class="bg-gray-50 text-slate-800">
     <div id="root"></div>
