--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="theme-color" content="#2563eb" />
+    <meta name="theme-color" content="#4f46e5" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="icon" href="/icon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Soccer Club</title>
+    <title>백운호수 FC</title>
 
     <!-- Kakao SDK -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
@@ -14,7 +15,7 @@
       Kakao.init(import.meta.env.VITE_KAKAO_JS_KEY);
     </script>
   </head>
-  <body class="bg-gray-50 text-slate-800">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
